<resources>
    <string name="app_name">TR</string>
    <string name="name">Trending Collection</string>
    <string name="namee">Top Collection</string>
    <string name="detail">About</string>
    <string name="detaill">Monkey is a common name that may refer to most mammals of the infraorder Simiiformes, also known as the simians. Traditionally, all animals in the group now known as simians are counted as monkeys except the apes, a grouping known as paraphyletic; however in the broader sense based on cladistics, apes (Hominoidea) are also included, making the terms monkeys and simians synonyms in regard of their scope. Monkeys are divided into the families of New World monkeys (Platyrrhini) and Old World monkeys (Cercopithecidae in the strict sense; Catarrhini in the broad sense, which again includes apes).</string>
    <string name="button">View on S NFT</string>
    <string name="history">History</string>
    <string name="item">2 Items</string>
    <string name="balance">Balance</string>
    <string name="upload">Upload</string>
    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>


</resources>