<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".profile">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="20dp"
        android:background="@drawable/bgtwo">

        <ImageButton
            android:id="@+id/balik"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_arrow_back_24"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/mone"
            android:layout_centerVertical="true"
            android:background="@drawable/circlebg"
            android:padding="5dp"/>

        <ImageButton
            android:id="@+id/pilih"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="5dp"
            app:srcCompat="@drawable/ic_baseline_photo_camera_24" />

        <TextView
            android:id="@+id/full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Adar Kirenias"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_medium"
            android:layout_toRightOf="@id/image_view"
            android:layout_centerVertical="true"
            android:includeFontPadding="false"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:id="@+id/nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Adar_onicc99"
            android:includeFontPadding="false"
            android:textSize="14sp"
            android:layout_toRightOf="@id/image_view"
            android:layout_below="@id/full_name"
            android:layout_marginLeft="10dp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="-100dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#EEEEEE"
            app:cardElevation="10dp"
            android:layout_margin="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_baseline_account_balance_wallet_24"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/logo_dompet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$200"
                    android:includeFontPadding="false"
                    android:textSize="20sp"
                    android:fontFamily="@font/roboto_medium"
                    android:layout_centerInParent="true"/>

                <TextView
                    android:id="@+id/logo_dompett"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/balance"
                    android:includeFontPadding="false"
                    android:textSize="14sp"
                    android:layout_below="@id/logo_dompet"
                    android:layout_centerHorizontal="true"/>


            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#EEEEEE"
            app:cardElevation="10dp"
            android:layout_margin="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_baseline_cloud_upload_24"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/logo_upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="15"
                    android:includeFontPadding="false"
                    android:textSize="20sp"
                    android:fontFamily="@font/roboto_medium"
                    android:layout_centerInParent="true"/>

                <TextView
                    android:id="@+id/logo_uploadd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload"
                    android:includeFontPadding="false"
                    android:textSize="14sp"
                    android:layout_below="@id/logo_upload"
                    android:layout_centerHorizontal="true"/>


            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/fullname"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_people_alt_24"
                android:drawablePadding="10dp"
                android:background="#FFFFFF"
                android:text="Adar Kirenias" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_email_24"
                android:drawablePadding="10dp"
                android:background="#FFFFFF"
                android:text="adarkirenias_Onic@gmail.com" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_phone_24"
                android:drawablePadding="10dp"
                android:background="#FFFFFF"
                android:text="+62 981 2391 8801" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


</LinearLayout>